--- a/src/pages/Deadline/Deadline.module.css
+++ b/src/pages/Deadline/Deadline.module.css
@@ -5,8 +5,12 @@
 }
 
 .body {
-    justify-items: center;
-
+    display: flex;
+    /* もしまだ flex を使っていない場合 */
+    justify-content: center;
+    /* 中央に配置 */
+    align-items: center;
+    /* 垂直方向にも中央に配置 */
 }
 
 .toggleGroup {
