--- a/src/pages/Deadline/Deadline.module.css
+++ b/src/pages/Deadline/Deadline.module.css
@@ -5,12 +5,8 @@
 }
 
 .body {
-    display: flex;
-    /* もしまだ flex を使っていない場合 */
-    justify-content: center;
-    /* 中央に配置 */
-    align-items: center;
-    /* 垂直方向にも中央に配置 */
+    text-align: center;
+    /* 中央寄せ */
 }
 
 .toggleGroup {
