--- a/src/pages/AddMemo/AddMemo.module.css
+++ b/src/pages/AddMemo/AddMemo.module.css
@@ -4,22 +4,19 @@ html,
 body {
     height: 100%;
     margin: 0;
-    /* 余計なマージンを排除 */
     overflow-x: hidden;
     /* 横スクロールを防ぐ */
 }
 
 .container {
     margin-top: 4.0rem;
-    /* ヘッダーの下に余白を追加 */
-
     padding: 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     /* 内容とボタンを上下に配置 */
-    height: 100%;
-    /* 高さを画面全体に */
+    min-height: 100vh;
+    /* 画面全体を最低限の高さに */
     overflow-y: auto;
     /* 必要に応じて縦方向にスクロール */
 }
