--- a/src/pages/AddMemo/AddMemo.module.css
+++ b/src/pages/AddMemo/AddMemo.module.css
@@ -45,6 +45,7 @@ body {
     border-radius: 6px;
     font-size: 15px;
     transition: border-color 0.2s;
+    box-sizing: border-box;
 }
 
 .input:focus,
